--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 	<visual-novel>
 		<loading-screen></loading-screen>
 		<main-screen>
-			<h1>Buddha<br>Cop</h1>
+			<h1>BUDDHA<br>COP</h1>
 			<div class="herojin"></div>
 			<main-menu> </main-menu>
 		</main-screen>
