--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 	<head prefix="og: http://ogp.me/ns#">
 
-		<title>Buddha Cop The Movie - The Game | Samsara Universe</title> <!--Up to 60-70 Characters. Optimal Format: Primary Keyword - Secondary Keyword | Brand Name-->
+		<title>Buddha Cop - Woke Vengeance | Samsara Universe</title> <!--Up to 60-70 Characters. Optimal Format: Primary Keyword - Secondary Keyword | Brand Name-->
 
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, maximum-scale=1">
@@ -98,29 +98,28 @@
 			</div>
 		</noscript>
 
-		
-<div id="monogatari">
-	<visual-novel>
-		<loading-screen></loading-screen>
-		<main-screen>
-			<h1>BUDDHA<br>COP</h1>
+		<div id="monogatari">
+			<visual-novel>
+				<language-selection-screen></language-selection-screen>
+				<loading-screen></loading-screen>
+				<main-screen>
+					<h1>BUDDHA<br>COP</h1>
 			<div class="herojin"></div>
-			<main-menu> </main-menu>
-		</main-screen>
-		<game-screen>
-			<dialog-log></dialog-log>
-			<agent-terminal></agent-terminal>
-			<text-box></text-box>
-			<quick-menu></quick-menu>
-		</game-screen>
-		<gallery-screen></gallery-screen>
-		<credits-screen></credits-screen>
-		<load-screen></load-screen>
-		<save-screen></save-screen>
-		<settings-screen></settings-screen>
-		<help-screen></help-screen>
-	</visual-novel>
-</div>
+					<main-menu></main-menu>
+				</main-screen>
+				<game-screen>
+					<dialog-log></dialog-log>
+					<text-box></text-box>
+					<quick-menu></quick-menu>
+				</game-screen>
+				<gallery-screen></gallery-screen>
+				<credits-screen></credits-screen>
+				<load-screen></load-screen>
+				<save-screen></save-screen>
+				<settings-screen></settings-screen>
+				<help-screen></help-screen>
+			</visual-novel>
+		</div>
 	</body>
 
 </html>
